@@ -1,0 +1,24 @@
+>* OK
+<1 CAPABILITY
+>* CAPABILITY IMAP4rev1
+>1 OK
+<2 LOGIN {4}
+>+
+<test {4}
+>+
+<test
+>2 OK
+<3 SELECT {5}
+>+
+<INBOX
+>* 1 EXISTS
+>3 OK
+<4 FETCH 1 UID
+>* 1 FETCH (UID 1)
+>4 OK
+<5 FETCH 1 BODY[]
+>* 1 FETCH (BODY[] {5}
+>Test. FLAGS ()
+>5 OK
+--
+invalid response: Test. FLAGS ()
