@@ -1,5 +1,13 @@
+06 November 2007
+
+* Use +FLAGS.SILENT instead of +FLAGS to mark IMAP mail as deleted, as we
+  don't need the new flags.
+
 03 November 2007
 
+* Exchange sometimes includes a FLAGS update as part of its FETCH response,
+  which made fdm complain. Change to accept it without error. Reported by
+  Leo D'Angelo.
 * Google IMAP has problems with naked flag lists on STORE commands (which are
   valid). Change to enclose the flags list in brackets. Reported by Andrew
   Pantyukhin.
@@ -760,4 +768,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.178 2007-11-04 08:26:03 nicm Exp $
+$Id: CHANGES,v 1.179 2007-11-06 08:37:59 nicm Exp $
